🐛 /rooms/{roomId}/metadata と /rooms/{roomId}/participants の openapi.yaml の記法が少し誤っていたのを修正
